--- a/css/index.css
+++ b/css/index.css
@@ -294,20 +294,18 @@ footer {
 
 @media (max-width: 800px) {
   header {
-      display: flex;
-      flex-direction: column-reverse;
+    display: flex;
+    flex-direction: column-reverse;
     width: 70%;
-    
   }
 
   header nav {
     margin-top: 35px;
     width: 150%;
-    
   }
 
   header nav a {
-    background: white;
+    background: blue;
     margin: 10px;
     font-size: 14px;
 
@@ -328,12 +326,144 @@ footer {
   }
 
   header .logo {
-
     width: 40%;
     margin-left: 260px;
-
   }
 
+  .title-logo img {
+    display: none;
+  }
+
+  /* content area */
+
+  .main-section {
+    border-top: 2px solid black;
+    margin-top: 76px;
+    padding-top: 39px;
+  }
+
+  .main-section .top-content {
+    display: flex;
+    padding: 0 10px;
+  }
+
+  .main-section .top-content .content {
+    width: 410px;
+    display: inline-block;
+    margin-right: 34px;
+  }
+
+  .main-section .top-content .content:last-child {
+    margin-right: 0;
+  }
+
+  .main-section .middle-img {
+    margin-top: 45px;
+    width: 640px;
+  }
+
+  .main-section .last-content {
+    display: flex;
+    margin-top: 37px;
+    padding: 0 10px;
+  }
+
+  .main-section .last-content .content {
+    width: 275px;
+    display: inline-block;
+    margin-right: 12px;
+  }
+
+  .main-section .last-content .content:last-child {
+    margin-right: 0;
+  }
+
+  /* contact and footer */
+
+  .contact {
+    margin-top: 37px;
+    padding: 0 10px;
+    margin-right: 12px;
+    border-top: 2px solid black;
+
+    display: block;
+  }
+
+  .contact h4 {
+    margin: 20px 0;
+    padding: 0px;
+    width: 150px;
+  }
+
+  .contact p {
+    margin: 20px 0;
+    padding: 0px;
+    width: 150px;
+  }
+
+  footer {
+    margin: 32px 0;
+    text-align: center;
+    font-size: 14px;
+  }
+}
+
+/* media queries max500 */
+@media (max-width: 500px) {
+  header {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 300px;
+  }
+
+  header nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 35px;
+    margin-left: 30px;
+    margin-right: 100px;
+    
+  }
+
+  header nav a {
+    background: white;
+    
+    font-size: 20px;
+    border-bottom: 1px solid black;
+    padding: 20px;
+    padding-top: 6px;
+    text-decoration: none;
+    color: gray;
+  }
+
+header nav a:first-child{
+    border-top: 1px solid black;
+    padding: 20px;
+    
+}
+
+
+
+  header nav a:hover {
+    text-decoration: underline;
+  }
+
+  header nav a:first-child {
+    margin-left: 0;
+  }
+
+  header nav a:last-child {
+    margin-right: 0;
+  }
+
+  header .logo {
+    width: 50%;
+    margin-left: 180px;
+    margin-bottom: 0px;
+   
+  }
+/* globe */
   .title-logo img {
     display: none;
   }
@@ -341,85 +471,49 @@ footer {
 /* content area */
 
 .main-section {
-    
     border-top: 2px solid black;
-    margin-top: 76px;
-    padding-top: 39px;
+    
   }
-  
+
   .main-section .top-content {
     display: flex;
     padding: 0 10px;
   }
-  
+
   .main-section .top-content .content {
     width: 410px;
     display: inline-block;
     margin-right: 34px;
-   
   }
-  
+
   .main-section .top-content .content:last-child {
     margin-right: 0;
   }
-  
+
   .main-section .middle-img {
     margin-top: 45px;
     width: 640px;
-    
   }
-  
+
   .main-section .last-content {
     display: flex;
     margin-top: 37px;
     padding: 0 10px;
   }
-  
+
   .main-section .last-content .content {
     width: 275px;
     display: inline-block;
     margin-right: 12px;
   }
-  
+
   .main-section .last-content .content:last-child {
     margin-right: 0;
   }
-  
 
 
-/* contact and footer */
-
-.contact {
-    margin-top: 37px;
-    padding: 0 10px;
-    margin-right: 12px;
-    border-top: 2px solid black;
-    
-    display: block;
-  }
-  
-  .contact h4 {
-    margin: 20px 0;
-    padding: 0px;
-    width: 150px;
-  }
-  
-  .contact p {
-    margin: 20px 0;
-    padding: 0px;
-    width: 150px;
-  }
-  
-  footer {
-    margin: 32px 0;
-    text-align: center;
-    font-size: 14px;
-  }
-  
 
 
 
 
 }
-
-/* media queries max500 */
